# apple-drm-vandalism

./: .gitignore  CMakeLists.txt  Makefile  wrapper.ggo
src/main_app/: apple_music_bridge.h  auth.c  auth.h  bridge_wrapper.cpp  cmdline.c  cmdline.h  config.c  config.h  context.c  context.h  drm.c  drm.h  handlers.c  handlers.h  main.c  server.c  server.h
src/wrapper/: wrapper.c
